--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kyoto Tours",
+  "name": "Explore Kyoto, Osaka & Nara - Best Guided Tours in Japan",
+  "description": "Experience the charm of Kyoto, Osaka, and Nara with tailored tours. Explore Japan's history, culture, and cuisine with expert local guides.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "%PUBLIC_URL%/images/logo_light.webp",
+      "sizes": "192x192",
+      "type": "image/webp"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "%PUBLIC_URL%/images/logo_light.webp",
+      "sizes": "512x512",
+      "type": "image/webp"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "lang": "en"
 }
