--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "/",
+  
   "eslintConfig": {
     "extends": [
       "react-app",
