--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/images/logo_light.webp",
+      "src": "https://loopserv2.net/kyoto-tours/images/logo_light.png",
       "sizes": "192x192",
       "type": "image/webp"
     },
     {
-      "src": "/images/logo_light.webp",
+      "src": "https://loopserv2.net/kyoto-tours/images/logo_light.png",
       "sizes": "512x512",
       "type": "image/webp"
     }
